# wafr-automation-tool

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.base.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  samconfig.toml  secrets  swagger.yaml  template.yaml  test.json  tsconfig.base.json  vitest.config.ts
backend/: README.md  pyproject.toml
backend/src/api/delete_assessment/app/: main.py
backend/src/api/delete_assessment/tests/: test_delete_assessment.py
backend/src/api/export_wa/app/: main.py
backend/src/api/export_wa/tests/: test_export_wa.py
backend/src/api/export_well_architected_tool/app/: main.py
backend/src/api/export_well_architected_tool/tests/: test_export_well_architected_tool.py
backend/src/api/rescan_assessment/app/: main.py
backend/src/api/rescan_assessment/tests/: test_rescan_assessment.py
backend/src/api/retrieve_all_assessments/app/: main.py
backend/src/api/retrieve_all_assessments/tests/: test_retrieve_all_assessments.py
backend/src/api/retrieve_assessment/app/: main.py
backend/src/api/retrieve_assessment/tests/: test_retrieve_assessment.py
backend/src/api/retrieve_best_practice/app/: main.py
backend/src/api/retrieve_best_practice_findings/app/: main.py
backend/src/api/retrieve_best_practice_findings/tests/: test_retrieve_best_practice_findings.py
backend/src/api/retrieve_finding/app/: main.py
backend/src/api/retrieve_finding/tests/: test_retrieve_finding.py
backend/src/api/start_assessment/app/: main.py
backend/src/api/start_assessment/tests/: test_start_assessment.py
backend/src/api/update_assessment/app/: main.py
backend/src/api/update_assessment/tests/: test_update_assessment.py
backend/src/api/update_best_practice/app/: main.py
backend/src/api/update_best_practice/tests/: test_update_best_practice.py
backend/src/api/update_best_practice_status/app/: main.py
backend/src/api/update_best_practice_status/tests/: test_update_best_practice_status.py
backend/src/api/update_finding/app/: main.py
backend/src/api/update_finding/tests/: test_update_finding.py
backend/src/api/update_finding_hide/app/: main.py
backend/src/api/update_finding_hide/tests/: test_update_best_practice_status.py  test_update_finding_hide.py
backend/src/api/update_pillar/app/: main.py
backend/src/shared_lib/: requirements.txt
backend/src/shared_lib/api/: assessment.py  config.py  event.py
backend/src/shared_lib/common/: config.py  entities.py  enums.py  event.py  models.py  task.py
backend/src/shared_lib/entities/: ai.py  api.py  assessment.py  best_practice.py  database.py  finding.py  models.py  question.py  scanning_tools.py
backend/src/shared_lib/exceptions/: ai.py  api.py  assessment.py  database.py  prowler.py  scanning_tool.py
backend/src/shared_lib/prowler/: findings.py
backend/src/shared_lib/services/: ai.py  assessment.py  database.py  prompt.py  storage.py
backend/src/shared_lib/state_machine/: config.py  event.py
backend/src/shared_lib/utils/: api.py  assessment.py  best_practice.py  files.py  prompt.py  questions.py  s3.py  tests.py
backend/src/state_machine/prepare_prompt/: main.py  prowler.py  requirements.txt
backend/src/state_machine/prepare_scan/: main.py
data/: README.md
(+1198 files in other folders)
