[project]
name = "wafr-automation-tool"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.37.5",
    "py-ocsf-models",
    "pydantic>=1.10.15",
    "regex>=2024.11.6",
    "types-boto3[bedrock-runtime,dynamodb,s3,stepfunctions]>=1.37.5",
]
