[project]
name = "wafr-automation-tool"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.37.5",
    "py-ocsf-models",
    "pydantic>=1.10.15",
    "regex>=2024.11.6",
    "types-boto3[bedrock-runtime,dynamodb,s3,stepfunctions]>=1.37.5",
]

[dependency-groups]
dev = ["moto>=5.1.1", "pytest>=8.3.5"]

[tool.pytest.ini_options]
addopts = "--verbose"
pythonpath = ["src/shared_lib"]
filterwarnings = ["ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D100", "D101", "D102", "D103", "D104", "D107"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = [
    "ANN201",
    "E402",
    "ERA001",
    "PLR2004",
    "S101",
    "S105",
    "TID252",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
extraPaths = ["src/shared_lib"]
reportUnannotatedClassAttribute = false
reportAny = false
reportUnusedCallResult = false
reportUnusedParameter = false
reportUnsafeMultipleInheritance = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportExplicitAny = false
reportImplicitRelativeImport = false
reportUnknownLambdaType = false
reportMissingTypeStubs = false
